--- a/config/hypr/UserConfigs/Monitors.conf
+++ b/config/hypr/UserConfigs/Monitors.conf
@@ -6,7 +6,7 @@
 # Configure your Display resolution, offset, scale and Monitors here, use `hyprctl monitors` to get the info.
 
 # Monitors
-monitor=,preferred,auto,1
+monitor=DP-1,2560x1440@240,0x0,1
 
 # NOTE: for laptop, kindly check notes in Laptops.conf regarding display
 # Created this inorder for the monitor display to not wake up if not intended.
