--- a/config/hypr/UserConfigs/Startup_Apps.conf
+++ b/config/hypr/UserConfigs/Startup_Apps.conf
@@ -10,7 +10,7 @@ $SwwwRandom = $UserScripts/WallpaperAutoChange.sh
 
 # wallpaper stuff / More wallpaper options below
 exec-once = swww-daemon --format xrgb
-#exec-once = $SwwwRandom $wallDIR # random wallpaper switcher every 30 minutes 
+exec-once = $SwwwRandom $wallDIR # random wallpaper switcher every 30 minutes 
 
 # Startup
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
@@ -32,7 +32,7 @@ exec-once = wl-paste --type text --watch cliphist store
 exec-once = wl-paste --type image --watch cliphist store
 
 # Rainbow borders
-exec-once = $UserScripts/RainbowBorders.sh &
+# exec-once = $UserScripts/RainbowBorders.sh &
 
 # Starting hypridle to start hyprlock
 exec-once = hypridle &
