--- a/config/hypr/UserConfigs/UserKeybinds.conf
+++ b/config/hypr/UserConfigs/UserKeybinds.conf
@@ -7,6 +7,7 @@
 
 $mainMod = SUPER
 $files = thunar
+$browser = thorium-browser
 $term = kitty
 $scriptsDir = $HOME/.config/hypr/scripts
 $UserScripts = $HOME/.config/hypr/UserScripts
@@ -20,7 +21,7 @@ bind = $mainMod, A, exec, pkill rofi || true && ags -t 'overview'
 
 bind = $mainMod, Return, exec, $term  # Launch terminal
 bind = $mainMod, T, exec, $files # Launch file manager
-
+bind $mainMod, B, exec, $browser
 bind = $mainMod ALT, C, exec, $UserScripts/RofiCalc.sh # calculator (qalculate)
 
 # pyprland
